# imageviewergl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clion code style settings.xml
shaders/: texture.frag  texture.vert
src/: GlRenderer_ImageRenderer.cpp  GlRenderer_ImageRenderer.hpp  GlWindowInputHandler.hpp  GlfwWindow.cpp  GlfwWindow.hpp  IGlRenderer.hpp  IGlRendererMaker.hpp  IGlWindow.hpp  IGlWindowAppearance.hpp  IRawImage.hpp  ImageDimensions.hpp  RawImage_StbImage.cpp  RawImage_StbImage.hpp  functor.hpp  functor_test.cpp  loadImageFile.cpp  loadImageFile.hpp  main.cpp  makeGlRendererMaker.cpp  makeGlRendererMaker.hpp  readImageDimensions.cpp  readImageDimensions.hpp
util/: Destroyer.hpp  ErrorString.hpp  IFunctor.hpp  Mutexed.hpp  NoCopy.hpp  makeShader.cpp  makeShader.hpp  makeUniqueFunctor.hpp  readFile.cpp  readFile.hpp  stb_image.cpp  toString.cpp  toString.hpp
